bread-lemonade/beertime/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    tier: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
  template:
    metadata:
      labels:
        tier: backend
    spec:
      containers:
        - image: backend:latest
          name: backend
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
