bread-lemonade/beertime/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    tier: control
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
